--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -1,6 +1,85 @@
-.navbar {
-    height: 5rem;
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100px;
+    backdrop-filter: blur(10px);
+    filter: none;
+    pointer-events: auto;
+    user-select: auto;
+    padding: 0px 50px;
+    z-index: 10;
+}
+
+.navbar-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    color: var(--light-blue);
+    font-family: var(--font-mono);
+}
+.navbar-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    text-decoration: none;
+    color: var(--accent-color);
+
+}
+.navbar-links {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-links ul {
+    display: flex;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+}
+
+.navbar-links ul li {
+    margin: 0px 4px;
+    /* position: relative;  */
+    font-size: var(--fz-sm)
+}
+
+.navbar-links ul li a {
+    padding: 10px;
+}
+
+.resume-button {
+    color: var(--accent-color);
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    border-radius: 4px;
+    padding: 0.75rem 1rem;
+    line-height: 1;
+    font-family: var(--font-mono);
+    font-size: var(--fz-sm);
+    margin-left: 15px;
+}
+
+.resume-button:hover{
+    background-color: var(--accent-color-tint);
+    transition: var(--transition);
+    /* outline: none; */
+}
+
+/* .navbar {
+    height: 100px;
+    padding: ;
     z-index: 999;
+    position: fixed;
+    top: 0;
+    pointer-events: auto !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,13 +100,13 @@
   }
 
 .navbar-logo {
-    color: #FEF1E0;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
     align-items: center;
+    color: var(--accent-color);
+    display: flex;
     font-family: 'Playfair Display', serif;
+    font-size: 2rem;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .navbar-menu {
@@ -65,7 +144,7 @@
     color: #FEF1E0;
 }
 
-a {
+ .navbar a {
     text-decoration: none;
 }
 .text-color{
@@ -89,4 +168,4 @@ a {
 }
 .navbar-button:hover .resume{
     color: #1D2D44;
-}
+} */
