--- a/src/Components/pages/About.css
+++ b/src/Components/pages/About.css
@@ -1,13 +1,141 @@
-.solid{
-    border-top: 3px solid #848EAC;
-    width: 250px;
-    margin-left: 5rem;
+.about-style {
+    margin: 0px auto;
+    padding: 100px 0px;
+    max-width: 900px;
+}
+
+.about-style .inner{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    gap: 50px;
+}
+
+.inner p {
+    margin: 0px 0px 15px;
+}
+
+.inner p > a {
+    color: var(--accent-color);
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    position: relative;
+    transition: var(--transition);
+    cursor: pointer;
+}
+
+.inner p > a:hover::after {
+    width: 100%;
+}
+
+.inner p > a::after {
+    content: "";
+    display: block;
+    width: 0px;
+    height: 1px;
+    /* position: relative;
+    bottom: 0.37em; */
+    transition: var(--transition);
+    background-color: var(--accent-color);
+    opacity: 0.5;
+}
+
+.about-text ul.skills-list {
+    padding: 0px;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(140px,200px));
+    overflow: hidden;
+    list-style: none;
+}
+
+.about-text ul.skills-list li {
+    position: relative;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-family: var(--font-mono);
+    font-size: var(--fz-sm);
+}
+
+.about-text ul.skills-list li::before{
+    content: "▹";
+    position: absolute;
+    left: 0px;
+    color: var(--accent-color);
+    font-size: var(--fz-sm);
+    line-height: 12px;
+}
+
+.about-img {
+    position: relative;
+    max-width: 280px;
+}
+
+.about-img img{
+    max-width: 280px;
+    position: relative;
+    z-index: 1;
+    border-radius: 4px;
+}
+
+.about-img .wrapper{
+    display: block;
+    position: relative;
+    width: 100%;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.about-img .wrapper::before, .about-img .wrapper::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 4px;
+}
+
+.about-img .wrapper::before {
+    top: 0px;
+    left: 0px;
+    background-color: transparent;
+}
+.about-img .wrapper::after{
+    top: 20px;
+    left: 20px;
+    z-index: 0;
+    border: 2px solid var(--accent-color);
 }
 
 
-.title {
+/* .about{
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-super-wrapper{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+}
+
+.about-wrapper{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.solid{
+    border-top: 1px solid #848EAC;
+    width: 250px;
+    margin-left: 3rem;
+}
+
+.title {
+    display: flex;
     align-items: center;
 
     color: white;
@@ -25,3 +153,23 @@
     font-size: 1rem;
     padding-bottom: 3rem;
 }
+
+.list{
+    width:20rem;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    line-height:40px;
+}
+
+.photo-wrapper{
+    border-radius: 20px;
+}
+
+.photo{
+    width: 22rem;
+    height: 28rem;
+    margin-left: -5rem;
+    border: 3px solid #848EAC;
+    border-radius:20px;
+} */
