--- a/src/Components/pages/Headline.css
+++ b/src/Components/pages/Headline.css
@@ -6,64 +6,60 @@
     font-style: normal;
 
 }
-.home{
-    overflow-x: hidden;
-}
-.intro-wrapper{
+
+.headline{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    margin: 0px auto;
+    max-width: 1000px;
+    padding: 100px 0px;
+}
+.headline h3{
+    margin-top: 10px;
+    color: var(--gray);
+    line-height: 0.9;
 }
 
- .intro-wrapper .summary-wrapper{
-    /* overflow-x: hidden; */
-} 
-
-.intro-wrapper .summary-wrapper .my-name{
-    color: white;
-    font-family: "Consolas";
-    font-weight: 400;
-    font-size: 1rem;
-    
-}
-
-.intro-wrapper .summary-wrapper .full-name{
+.big-heading{
     color: #CCD6F6;
     font-family: "kamerik_105bold";
     font-weight: 700;
-    font-size: 4rem;
-
-}
-.intro-wrapper .summary-wrapper .aspiration{
-    color: #848EAC;
-    font-family: "kamerik_105bold";
-    font-weight: 700;
-    font-size: 4rem;
-    padding-bottom: 1rem;
-}
-
-.intro-wrapper .summary-wrapper .summary{
     display: block;
+    font-size: 1.5em;
+    margin: 0px;
+    font-size: clamp(32px, 8vw, 56px);
+    text-align: center;
+}
+
+.summary{
+    padding-top: 3rem;
+    width: 100%;
+    /* display: block; */
     color: #848EAC;
     font-family: "Roboto";
     font-weight: 400;
-    font-size: 1rem;
-    padding-bottom: 3rem;
+    font-size: 20px;
+    line-height: 1.3;
+    max-width: 500px;
 }
 
-.intro-wrapper .summary-wrapper .lets-talk{
-    border-radius: 10px;
-    color: #FEF1E0;
-    font-family: "Consolas";
-    font-weight: 400;
-    font-size: 1rem;
-    height: 4rem;
-    width: 10rem;
-    border: 2px solid #FEF1E0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.email-link{
+    color: var(--accent-color);
+    background-color: transparent;
+    border-radius: 5px;
+    font-family: var(--font-mono);
+    font-size: var(--fz-md);
+    line-height: 1;
+    text-decoration: none;
+    margin-top: 50px;
+    padding: 1.25rem 1.75rem;
+    border: 1px solid var(--accent-color);
 }
+.email-link:hover {
+    background-color: var(--accent-color-tint);
+    transition: var(--transition);
+}
+
