--- a/src/Components/pages/Home.css
+++ b/src/Components/pages/Home.css
@@ -7,63 +7,95 @@
 
 }
 .home{
+    display: flex;
+    flex-direction: column;
     overflow-x: hidden;
+    min-height: 100vh;
+    background-color: #001B2E;
+    /* background-image: linear-gradient(180deg, #121C2C, #000000); */
+    color: var(--gray);
+    font-size: var(--fz-sm);
+    font-family: var(--font-sans);
+    line-height: 1.5;
 }
-.intro-wrapper{
+
+.content-container {
+    padding: 0px 150px;
+    margin: 0px auto;
+    width: 100%;
+    max-width: 1600px;
+    min-height: 100vh;
+}
+
+.heading {
     display: flex;
-    justify-content: center;
+    color: var(--accent-color);
     align-items: center;
-    
-    height: 100vh;
-    width:100vw;
+    position: relative;
+    margin: 10px 0px 40px;
+    width: 100%;
+    font-size: clamp(24px, 5vw, var(--fz-heading));
 }
 
- .intro-wrapper .summary-wrapper{
-    /* overflow-x: hidden; */
-} 
-
-.intro-wrapper .summary-wrapper .my-name{
-    color: white;
-    font-family: "Consolas";
-    font-weight: 400;
-    font-size: 1rem;
-    
-}
-
-.intro-wrapper .summary-wrapper .full-name{
-    color: #CCD6F6;
-    font-family: "kamerik_105bold";
-    font-weight: 700;
-    font-size: 4rem;
-
-}
-.intro-wrapper .summary-wrapper .aspiration{
-    color: #848EAC;
-    font-family: "Kamerik 105";
-    font-weight: 700;
-    font-size: 4rem;
-    padding-bottom: 1rem;
-}
-
-.intro-wrapper .summary-wrapper .summary{
+.heading::after {
+    content: "";
     display: block;
-    color: #848EAC;
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 1rem;
-    padding-bottom: 3rem;
+    position: relative;
+    top: 0px;
+    height: 1px;
+    width: 200px;
+    margin-left: 20px;
+    background-color: white;
 }
 
-.intro-wrapper .summary-wrapper .lets-talk{
-    border-radius: 10px;
-    color: #FEF1E0;
-    font-family: "Consolas";
-    font-weight: 400;
-    font-size: 1rem;
-    height: 4rem;
-    width: 10rem;
-    border: 2px solid #FEF1E0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+div {
+    display: block;
+}
+
+a {
+    display: inline-block;
+    color: inherit;
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer;
+    border: 0px;
+    border-radius: 0px;
+}
+
+ul {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    list-style: none;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0px 0px 10px;
+    color: var(--light-gray);
 }
