--- a/src/Components/links/left.css
+++ b/src/Components/links/left.css
@@ -33,3 +33,9 @@
     margin: 0px auto;
     background-color: var(--light-gray);
 }
+
+@media (max-width: 768px){
+    .left {
+        display: none;
+    }
+}
