--- a/src/Components/pages/About.css
+++ b/src/Components/pages/About.css
@@ -106,70 +106,13 @@
     border: 2px solid var(--accent-color);
 }
 
+@media (max-width:768px) {
+    .about-style .inner {
+        display: block;
+    }
 
-/* .about{
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
+    .about-style .about-img {
+        margin: 50px auto 0px;
+        width: 70%;
+    }
 }
-
-.about-super-wrapper{
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
-}
-
-.about-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.solid{
-    border-top: 1px solid #848EAC;
-    width: 250px;
-    margin-left: 3rem;
-}
-
-.title {
-    display: flex;
-    align-items: center;
-
-    color: white;
-    font-family: "Consolas";
-    font-weight: 400;
-    font-size: 2rem;
-    
-}
-
-.about-info{
-    display: block;
-    color: #848EAC;
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 1rem;
-    padding-bottom: 3rem;
-}
-
-.list{
-    width:20rem;
-    columns: 2;
-    -webkit-columns: 2;
-    -moz-columns: 2;
-    line-height:40px;
-}
-
-.photo-wrapper{
-    border-radius: 20px;
-}
-
-.photo{
-    width: 22rem;
-    height: 28rem;
-    margin-left: -5rem;
-    border: 3px solid #848EAC;
-    border-radius:20px;
-} */
