--- a/src/Components/pages/Headline.css
+++ b/src/Components/pages/Headline.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'kamerik_105bold';
-    src: url('/fonts/kamerik105-bold-webfont.woff2') format('woff2'),
-         url('/fonts/kamerik105-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 .headline{
     display: flex;
     justify-content: center;
@@ -51,10 +42,10 @@
     background-color: transparent;
     border-radius: 5px;
     font-family: var(--font-mono);
-    font-size: var(--fz-md);
+    font-size: var(--fz-sm);
     line-height: 1;
     text-decoration: none;
-    margin-top: 50px;
+    margin-top: 32px;
     padding: 1.25rem 1.75rem;
     border: 1px solid var(--accent-color);
 }
