--- a/src/Components/pages/Home.css
+++ b/src/Components/pages/Home.css
@@ -27,6 +27,17 @@
     min-height: 100vh;
 }
 
+@media(max-width: 1080px) {
+    .content-container {
+        padding: 0px 100px;
+    }
+}
+@media(max-width: 768px) {
+    .content-container {
+        padding: 0px 50px;
+    }
+}
+
 .heading {
     display: flex;
     color: var(--accent-color);
@@ -35,6 +46,7 @@
     margin: 10px 0px 40px;
     width: 100%;
     font-size: clamp(24px, 5vw, var(--fz-heading));
+    white-space: nowrap;
 }
 
 .heading::after {
