--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'kamerik_105bold';
+    src: url('/fonts/kamerik105-bold-webfont.woff2') format('woff2'),
+         url('/fonts/kamerik105-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 :root {
     --accent-color: #FFC49B;
     --accent-color-tint: rgba(255, 196, 155, 0.15);
@@ -13,6 +21,7 @@
     --fz-heading: 32px;
     --font-sans: 'Roboto', sans-serif;
     --font-mono: 'Inconsolata', monospace;
+    --font-display: "kamerik_105bold";
     --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
 }
 
