add button functionality

--- a/src/Components/pages/Experience.css
+++ b/src/Components/pages/Experience.css
@@ -89,6 +89,6 @@
     background-color: var(--accent-color-tint);
 }
 
-.job-item.active:focus {
-    outline: 0px;
+*:focus {
+    outline: none;
 }
