--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -55,6 +55,10 @@
     padding: 10px;
 }
 
+.navbar-links ul li:hover {
+    color: var(--accent-color);
+}
+
 .resume-button {
     color: var(--accent-color);
     background-color: transparent;
